# oshash-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  release.toml
.github/: codecov.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  test.yml
benches/: oshash.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
examples/: simple_hash.rs
src/: async_impl.rs  lib.rs  sync.rs
test-resources/: testdata  too_small
tests/: async_integration_tests.rs  integration_tests.rs
