[package]
name = "oshash"
license = "GPL-3.0-or-later"
authors = ["Steven Carter <steven.w.carter@gmail.com>"]
description = "An implementation of https://pypi.org/project/oshash/ in Rust"
repository = "https://github.com/stevenwcarter/oshash-rs"
keywords = ["hashing"]
categories = ["algorithms"]
homepage = "https://github.com/stevenwcarter/oshash-rs"
version = "0.2.1"
edition = "2021"
exclude = [".github"]

[features]
default = ["cli"]
cli = ["clap", "anyhow", "tokio"]

[dependencies]
clap = { version = "4.0", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[[bin]]
name = "oshash"
path = "src/main.rs"
required-features = ["cli", "anyhow", "tokio"]
