[package]
name = "oshash"
license = "GPL-3.0-or-later"
authors = ["Steven Carter <steven.w.carter@gmail.com>"]
description = "Fast media file hashing using first/last 64KB chunks and file size; Rust port of the Python oshash library"
repository = "https://github.com/stevenwcarter/oshash-rs"
keywords = ["hashing", "checksum", "media-files", "performance"]
categories = ["algorithms", "multimedia", "command-line-utilities"]
homepage = "https://github.com/stevenwcarter/oshash-rs"
documentation = "https://docs.rs/oshash"
readme = "README.md"
version = "0.4.0"
edition = "2021"
rust-version = "1.60"
exclude = [".github"]

[features]
tokio = ["dep:tokio"]

[workspace]
members = ["cli"]
resolver = "2"

[dependencies]
tokio = { version = "1.29.1", features = [
  "fs",
  "io-std",
  "io-util",
], optional = true }

[dev-dependencies]
tokio-test = "0.4.3"
tokio = { version = "1.29.1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
criterion = { version = "0.5", features = ["html_reports"] }
# Version floors for transitive deps of criterion that don't compile on modern Rust at their minimum version
serde = "1.0.100"
regex = "1.6"

[[bench]]
name = "oshash"
harness = false
