[package]
name = "oshash-cli"
license = "GPL-3.0-or-later"
authors = ["Steven Carter <steven.w.carter@gmail.com>"]
description = "An implementation of https://pypi.org/project/oshash/ in Rust"
repository = "https://github.com/stevenwcarter/oshash-rs"
keywords = ["hashing"]
categories = ["algorithms"]
homepage = "https://github.com/stevenwcarter/oshash-rs"
version = "0.2.1"
edition = "2021"
exclude = [".github"]

[dependencies]
oshash = { version = "0.2.1" }
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "oshash"
path = "src/main.rs"
