[package]
name = "oshash-cli"
license = "GPL-3.0-or-later"
authors = ["Steven Carter <steven.w.carter@gmail.com>"]
description = "CLI for fast media file hashing (oshash algorithm) — reads only first/last 64KB and file size; Rust port of the Python oshash library"
repository = "https://github.com/stevenwcarter/oshash-rs"
keywords = ["hashing"]
categories = ["algorithms"]
homepage = "https://github.com/stevenwcarter/oshash-rs"
version = "0.4.0"
edition = "2021"
rust-version = "1.60"
exclude = [".github"]

[dependencies]
oshash = { version = "0.4.0", path = "../" }
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1.0" }

[[bin]]
name = "oshash"
path = "src/main.rs"
